--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/slide1.jpeg" class="d-block w-100 hero-image" alt="...">
+      <img src="../KABIRPROPERTYMANAGEMENT/img/slide1.jpeg" class="d-block w-100 hero-image" alt="...">
       <div class="carousel-caption">
         <h4 class="py-lg-5">KABIR PROPERTY MANAGEMENT</h4>
         <h2 class="py-lg-5"> Let us Manage your Property! </h2>
@@ -99,7 +99,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img/slide2.jpg" class="d-block w-100 hero-image" alt="...">
+      <img src="../KABIRPROPERTYMANAGEMENT/img/slide2.jpg" class="d-block w-100 hero-image" alt="...">
       <div class="mask" style="background-color: rgba(0,0,0,0.5)">
       <div class="carousel-caption">
         <h5>YOUR NEXT PROPERTY MANAGER</h5>
@@ -109,7 +109,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img/slide3.jpg" class="d-block w-100 hero-image" style="border-color: #f0f9ff;" alt="...">
+      <img src="../KABIRPROPERTYMANAGEMENT/img/slide3.jpg" class="d-block w-100 hero-image" style="border-color: #f0f9ff;" alt="...">
       <div class="carousel-caption">
         <h5>FOR YOUR NEXT DREAM HOME</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dignissimos laboriosam, nam quidem sed temporibus.</p>
