--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/nav.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="/css/nav.css">
   <!--  <link rel="stylesheet" type="text/css" href="css/style.css">-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <meta name="theme-color" content="#fafafa">
@@ -62,7 +62,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
-          <a class="nav-link" href="../KPM/php/pages/home.php"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
+          <a class="nav-link" href="php/pages/home.php"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
           </li>
         </ul>
       </div>
@@ -73,50 +73,6 @@
 <!-- Home Section -->
 
 <section id="home">
-  <!--<div id="hero-carousel" class="carousel slide" data-bs-ride="false">-->
-  <!--  <div class="carousel-indicators">-->
-  <!--    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>-->
-  <!--    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>-->
-  <!--    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>-->
-  <!--  </div>-->
-  <!--  <div class="carousel-inner text-center">-->
-  <!--    <div class="carousel-item active c-item" style="height: 500px;">-->
-  <!--      <img src="img/slide1.jpeg" class="d-block w-100 hero-image c-img" alt="...">-->
-  <!--      <div class="carousel-caption d-flex h-100 align-items-center justify-content-center">-->
-  <!--        <h5 style="font-size: 65px;">KABIR PROPERTY MANAGEMENT</h5>-->
-  <!--      </div>-->
-  <!--      <div class="carousel-caption">-->
-  <!--        <h3>“Let us Manage your Property!!” - KPM</h3>-->
-  <!--        <p><a href="#about" class="btn btn-warning mt-3">Learn More</a></p>-->
-  <!--      </div>-->
-  <!--    </div>-->
-  <!--    <div class="carousel-item c-item" style="height: 500px;">-->
-  <!--      <img src="img/slide2.jpg" class="d-block w-100 hero-image c-img" alt="...">-->
-  <!--      <div class="mask" style="background-color: rgba(0,0,0,0.5)">-->
-  <!--      <div class="carousel-caption">-->
-  <!--        <h5>YOUR NEXT PROPERTY MANAGER</h5>-->
-  <!--        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium dolor doloribus eveniet hic quos!</p>-->
-  <!--        <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>-->
-  <!--      </div>-->
-  <!--      </div>-->
-  <!--    </div>-->
-  <!--    <div class="carousel-item c-item" style="height: 500px;">-->
-  <!--      <img src="img/slide3.jpg" class="d-block w-100 hero-image c-img" style="border-color: #f0f9ff;" alt="...">-->
-  <!--      <div class="carousel-caption">-->
-  <!--        <h5>FOR YOUR NEXT DREAM HOME</h5>-->
-  <!--        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dignissimos laboriosam, nam quidem sed temporibus.</p>-->
-  <!--        <p><a href="#" class="btn btn-warning mt-3">Learn More</a></p>-->
-  <!--      </div>-->
-  <!--    </div>-->
-  <!--  </div>-->
-  <!--  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">-->
-  <!--    <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-  <!--    <span class="visually-hidden">Previous</span>-->
-  <!--  </button>-->
-  <!--  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">-->
-  <!--    <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-  <!--    <span class="visually-hidden">Next</span>-->
-  <!--  </button>-->
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item c-item active" style="height: 450px;">
@@ -382,7 +338,7 @@
     </div>
     <div class="row m-0">
       <div class="col-md-12 p-0 pt-4 pb-4">
-        <form action="#" class="bg-white p-4.m-auto">
+        <form action="#" class="bg-white p-4.m-auto" netlify>
           <div class="row">
             <div class="col-md-12">
               <div class="mb-3">
