--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/css/nav.css">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="./css/nav.css">
   <!--  <link rel="stylesheet" type="text/css" href="css/style.css">-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <meta name="theme-color" content="#fafafa">
@@ -37,8 +37,8 @@
     <div class="container-fluid">
       <a href="#" class="navbar-brand">
         <!-- Logo Image -->
-        <img id="imgBlack" src="img/logo.png" width="50" height="50" alt="" class="d-inline-block align-middle mr-2 d-none">
-        <img id="imgPink" src="img/logo2.png" width="50" height="50" alt="" class="d-inline-block align-middle mr-2">
+        <img id="imgBlack" src="./img/logo.png" width="50" height="50" alt="" class="d-inline-block align-middle mr-2 d-none">
+        <img id="imgPink" src="./img/logo2.png" width="50" height="50" alt="" class="d-inline-block align-middle mr-2">
         <!-- Logo Text -->
         <span class="text-uppercase font-weight-bold">KABIR PROPERTY MANAGEMENT</span>
       </a>
@@ -76,7 +76,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item c-item active" style="height: 450px;">
-        <img src="img/slide1.jpeg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
+        <img src="./img/slide1.jpeg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
         <div class="mask" style="background-color: rgba(0,0,0,0.5)">
           <div class="carousel-caption">
             <h5>KABIR PROPERTY MANAGEMENT</h5>
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="carousel-item c-item" style="height: 450px;">
-        <img src="img/slide2.jpg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
+        <img src="./img/slide2.jpg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
         <div class="mask" style="background-color: rgba(0,0,0,0.5)">
           <div class="carousel-caption">
             <h5>YOUR NEXT PROPERTY MANAGER</h5>
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="carousel-item c-item" style="height: 450px;">
-        <img src="img/slide3.jpg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
+        <img src="./img/slide3.jpg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
         <div class="mask" style="background-color: rgba(0,0,0,0.5)">
           <div class="carousel-caption">
             <h5>FOR YOUR NEXT DREAM HOME</h5>
@@ -410,13 +410,13 @@
 <!-- JavaScript code -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-<script src="js/vendor/modernizr-3.11.2.min.js"></script>
-<script src="js/plugins.js"></script>
+<script src="./js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="./js/plugins.js"></script>
 <script src="https://kit.fontawesome.com/39657b55f5.js" crossorigin="anonymous"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script src="js/main.js"></script>
-<script src="js/nav.js"></script>
+<script src="./js/main.js"></script>
+<script src="./js/nav.js"></script>
 </body>
 
 </html>
