--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
-          <a class="nav-link" href="php/pages/home.php"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
+          <a class="nav-link" href="./php/pages/home.php"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
           </li>
         </ul>
       </div>
