added to index html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="./img/logo2.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="./css/normalize.css">
@@ -75,7 +75,7 @@
 <section id="home">
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item c-item active" style="height: 450px;">
+      <div class="carousel-item c-item active" style="height: 500px;">
         <img src="./img/slide1.jpeg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
         <div class="mask" style="background-color: rgba(0,0,0,0.5)">
           <div class="carousel-caption">
@@ -85,7 +85,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item c-item" style="height: 450px;">
+      <div class="carousel-item c-item" style="height: 500px;">
         <img src="./img/slide2.jpg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
         <div class="mask" style="background-color: rgba(0,0,0,0.5)">
           <div class="carousel-caption">
@@ -95,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item c-item" style="height: 450px;">
+      <div class="carousel-item c-item" style="height: 500px;">
         <img src="./img/slide3.jpg" class="d-block w-100 c-img" style="height:100%; object-fit: cover" alt="...">
         <div class="mask" style="background-color: rgba(0,0,0,0.5)">
           <div class="carousel-caption">
