worked on profile.php and home page!

--- a/pages/services.html
+++ b/pages/services.html
@@ -72,7 +72,7 @@
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-light pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body text-dark">
             <i class="fa-solid fa-screwdriver-wrench py-2"></i>
             <h3 class="card-title">Comparative Market Analysis</h3>
