--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-screwdriver-wrench py-2"></i>
             <h3 class="card-title">Maintenance & Repairs</h3>
@@ -165,7 +165,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-house-circle-check py-2"></i>
             <h3 class="card-title">Inspections & Check Ups</h3>
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-folder-open py-2"></i>
             <h3 class="card-title">Financial Records</h3>
@@ -195,17 +195,17 @@
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4 pt-3">
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-sharp fa-solid fa-calendar-check py-2"></i>
             <h3 class="card-title">Monthly Rent Collection</h3>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta exercitationem iusto quo rem! Corporis cupiditate eaque est, exercitationem fugiat id labore magni numquam obcaecati perspiciatis quae sit tempore, voluptas voluptatum.</p>
-            <a href="./pages/services.html"><button class="btn btn-warning text-dark">Learn More</button></a>
+            <a href="./pages/services.html"><button class="btn">Learn More</button></a>
           </div>
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-hand-holding-dollar py-2"></i>
             <h3 class="card-title">Collecting Security Deposits</h3>
@@ -215,7 +215,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-money-bill-trend-up py-2"></i>
             <h3 class="card-title">Marketing</h3>
