--- a/pages/services.html
+++ b/pages/services.html
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-light pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body text-dark">
             <i class="fa-solid fa-house-circle-check py-2"></i>
             <h3 class="card-title">Branding & Marketing</h3>
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-light pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body text-dark">
             <i class="fa-solid fa-folder-open py-2"></i>
             <h3 class="card-title">PM led Walk-Thrus</h3>
@@ -99,7 +99,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-light pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body text-dark">
             <i class="fa-solid fa-screwdriver-wrench py-2"></i>
             <h3 class="card-title">Application Collection & Credit/Background Checks</h3>
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-light pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body text-dark">
             <i class="fa-solid fa-house-circle-check py-2"></i>
             <h3 class="card-title">Personal Leases</h3>
@@ -132,7 +132,7 @@
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-screwdriver-wrench py-2"></i>
             <h3 class="card-title">Maintenance & Repairs</h3>
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-house-circle-check py-2"></i>
             <h3 class="card-title">Inspections & Check Ups</h3>
@@ -150,7 +150,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-folder-open py-2"></i>
             <h3 class="card-title">Financial Records & Book Keeping</h3>
@@ -159,7 +159,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-screwdriver-wrench py-2"></i>
             <h3 class="card-title">Monthly Rent Collection</h3>
@@ -168,7 +168,7 @@
         </div>
       </div>
       <div class="col-12 col-md-12 col-lg-4">
-        <div class="card text-white text-center bg-dark pb-2">
+        <div class="card text-white text-center pb-2">
           <div class="card-body">
             <i class="fa-solid fa-house-circle-check py-2"></i>
             <h3 class="card-title">Security Deposit Storing</h3>
